# project-iot

./: .gitignore  DEPLOYMENT.md  IoT_Frontend_Sensor_Data_Spec.md  PERFORMANCE_OPTIMIZATION.md  SECURITY_FLOW_SUMMARY.md  SIMPLIFIED_UI_EXPLANATION.md  espflow.md  package-lock.json  prompt.txt  prompt2.txt  prompt3.txt  prompt_content_iot_backend_fastify.txt  sensor-data-fix-plan.md  start-high-performance.bat  start-high-performance.sh  test-system.sh
iot-backend/: .env.example  README.md  index.ts  package.json  tsconfig.json
iot-backend-express/: .env.example  .env.test  .gitignore  BUZZER_CONTROL_SYSTEM.md  ERROR_FIXES_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  package-lock.json  package.json  refactor-plan.md
iot-code/: CameraWebServer.ino  camera_pins.h
iot-code-arduino-onefile/: iot_camera_stream.ino  iot_camera_stream_espressif.c
iot-code-espressif/: .clangd  .cproject  .project  idf_component.yml  sdkconfig
iot-code-espressif/main/: CMakeLists.txt  main.c
iot-code-final/: CMakeLists.txt
iot-code-sensors-2ndesp/: .env.example
iot-frontend/: .env.example  API_FIX_SUMMARY.md  LOGGING_SUMMARY.md  app.json  config.ts  package-lock.json  package.json
iot-image/: .env.example  .gitignore  LOGGING_FIX.md  README.md  api_routes.py  config.py  data_store.py  gpu_face_service.py  log_utils.py  main.py  middleware.py  quick_test.py  requirements.txt  ssh_tunnel.py  start_service.bat  start_service.sh  test_logging.py
markdown-steps/: backend_image_enhancement.md  implementation-plan.md  python_image_enhancement.md  summary.md
(+93 files in other folders)
